# Freed-Wu

./: .Rprofile  .Xsession  .astylerc  .bash_login  .bash_logout  .bash_profile  .bashrc  .bastetrc  .ccls  .chktexrc  .clang-format  .condarc  .curlrc  .deepsource.toml  .devscripts  .dockerignore  .fbtermrc  .gitconfig  .gitignore  .gitmodules  .gtkrc-2.0  .indentconfig.yaml  .inputrc  .lessfilter  .lesskey  .luarocks  .mailcap  .manpath  .minirc.dfl  .minttyrc  .nix-channels  .octave_packages  .octaverc  .oelint.cfg  .p10k.zsh  .pam_environment  .pdbrc  .pre-commit-config.yaml  .procmailrc  .profile  (+36 more)
.bundle/: config  (+1 more)
.config/nvim/template/: .PL  .asm  .c  .cfg  .dockerignore  .dtx  .gdbinit  .htm  .ins  .jq  .m  .pm  .pod  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .py  .qsf  .readthedocs.yaml  .service  .sh  .snippets  .tex  .txt  .user.js  .v  .yaml  .yml  CITATION.cff  Dockerfile  MANIFEST.SKIP.bak  Makefile  Makefile.PL  PKGBUILD  README.md  _  __init__.py  __main__.py  __main___test.py  _main__.py  _output.yaml  (+41 more)
.config/nvim/templates/: %.S  %.bb  %.c  %.cc  %.cmacro  %.cmake  %.cpp  %.cu  %.dtx  %.ebuild  %.envrc  %.h  %.htm  %.ino  %.ins  %.json  %.m  %.md  %.mif  %.nasm  %.nix  %.nobj.lua  %.pc.in  %.plugin.zsh  %.py  %.rb  %.rockspec  %.s  %.service  %.snippets  %.sublime-syntax  %.user.js  %.vimspec  %.yaml  %2FCMakeLists%5C.txt%24  %2F__main__%5C.py%24  %2Frequirements%2F%5B%5E%2F%5D%5C.txt%24  %2Fscripts%2F.%2A%5C.pl%24  %5B%5E%2F%5D_test%5C.py%24  -test%5C.v%24  (+56 more)
.config/nvim/templates/%-git/: PKGBUILD
.config/nvim/templates/%.nvim/: %.c  %.gitignore  .readthedocs.yaml  config.ld  shell.nix  template.rockspec  xmake.lua
.config/nvim/templates/%.nvim/scripts/: %.lua  ldoc.sh
.config/nvim/templates/%.nvim/spec/: %_spec.lua
.config/nvim/templates/%.vim/autoload/: %.vim
.config/nvim/templates/%.vim/compiler/: %.vim
.config/nvim/templates/%shortcuts/: %
.config/nvim/templates/.github/: FUNDING.yml  dependabot.yml
.config/nvim/templates/.github/workflows/: %.yml  bash.yml  cibuildwheel.yml  cmake.yml  docker.yml  javascript.yml  jekyll.yml  jq.yml  latex.yml  lua.yml  meson.yml  mirror.yml  nix.yml  octave.yml  perl.yml  ppa.yml  python.yml  skbuild.yml  texlive.yml  vim.yml  zsh.yml
.config/nvim/templates/_layouts/: %.html
.config/nvim/templates/_posts/: %.md
.config/nvim/templates/after/: %2F_%5B%5E%2F%5D%2A  %5C.PL%24  %5C.asm%24  %5C.bats%24  %5C.c%24  %5C.desktop%24  %5C.dot%24  %5C.h%24  %5C.htm%24  %5C.jq%24  %5C.m%24  %5C.mif%24  %5C.mtx%24  %5C.pm%24  %5C.pod%24  %5C.py%24  %5C.rb%24  %5C.sp%24  %5C.sublime-syntax%24  %5C.tex%24  %5C.tmux%24  %5C.user%5C.js%24  %5C.v%24  %5C.vt%24  %5C.zsh%24
.config/nvim/templates/assets/queries/: %.scm
.config/nvim/templates/before/: %2F%5C.clangd%24  %2FCITATION%5C.cff%24  %2FCMakeLists%5C.txt%24  %2FDockerfile%24  %2FDoxyfile%24  %2FGemfile%24  %2FMANIFEST%5C.SKIP%5C.bak%24  %2FMakefile%24  %2FMakefile%5C.PL%24  %2FPKGBUILD%24  %2FREADME%5C.md%24  %2F__main___test%5C.py%24  %2Faction%5C.yml%24  %2Fbuild%5C.sh%24  %2Fcmake%2Fandroid-ndk%5C.cmake%24  %2Fcmake%2Fmingw%5C.cmake%24  %2Fcoc%2Fsource%2F%5B%5E%2F%5D%5C%2B%5C.vim%24  %2Fcompiler%2F%5B%5E%2F%5D%5C%2B%5C.vim%24  %2Fconfig%5C.h%5C.in%24  %2Fconfigure%5C.ac%24  %2Fdefault%5C.nix%24  %2Fdist%5C.ini%24  %2Fdocs%2Fconf%5C.py%24  %2Fdocs%2Findex%5C.md%24  %2Fdocs%2Fresources%2Fconfigure%5C.md%24  %2Fdocs%2Fresources%2Finstall%5C.md%24  %2Fexternal%2F.%2A%2F__init__%5C.py%24  %2Fexternal%2F.%2A%2F__main__%5C.py%24  %2Fmain%5C.py%24  %2Fmain%5C.tex%24  %2Fneomuttrc%5C.%5B%5E%2F%5D%5C%2B%24  %2Fpackage%5C.json%24  %2Fplugin%2F%5B%5E%2F%5D%5C%2B%5C.vim%24  %2Fpo4a%2Fpo4a%5C.cfg%24  %2Fpyproject%5C.toml%24  %2Frequirements%2Fdev%5C.txt%24  %2Fsetup%5C.sh%24  %2Fsignature%5C.tex%24  %2Fsrc%2FMakefile%5C.am%24  %2Fsyntax%2F%5B%5E%2F%5D%5C%2B%5C.vim%24  (+7 more)
.config/nvim/templates/browser-%/: manifest.json  package.json
.config/nvim/templates/c%/: .readthedocs.yaml
.config/nvim/templates/cmake/: sanitize.cmake
.config/nvim/templates/coc-%/: shell.nix
.config/nvim/templates/coc-%/tests/: test.vim
.config/nvim/templates/completions/: _%
.config/nvim/templates/debian/: .gitignore  control  rules
.config/nvim/templates/dev-python/%/: %.ebuild  metadata.xml
.config/nvim/templates/docs/: conf.py
.config/nvim/templates/docs/api/: %.md
.config/nvim/templates/docs/resources/: configure.md  install.md
.config/nvim/templates/drivers/%/: Makefile
.config/nvim/templates/figures/: %.tex
.config/nvim/templates/ftdetect/: %.vim
.config/nvim/templates/ftplugin/: %.vim
.config/nvim/templates/gnome-shell-extension-%/: metadata.json  package.json
.config/nvim/templates/indent/: %.vim
.config/nvim/templates/lua-%/: PKGBUILD
.config/nvim/templates/mingw-w64-%/: PKGBUILD
.config/nvim/templates/nvim/: %.lua
.config/nvim/templates/perl-%/: PKGBUILD
.config/nvim/templates/python-%/: PKGBUILD  nvchecker.toml  shell.nix
.config/nvim/templates/recipes-modules/%/: %.c  Makefile  platform.c  shell.nix
.config/nvim/templates/rime/: %.custom.yaml
.config/nvim/templates/scripts/: %.sh  %.tcl  %.vim  bitahub.Dockerfile
.config/nvim/templates/sources/: %.zsh
.config/nvim/templates/src/: CMakeLists.txt  Makefile  main.nix
.config/nvim/templates/src/%/: __init__.py  __main__.py  meson.build
.config/nvim/templates/syntax/: %.vim
.config/nvim/templates/t/: %.t
.config/nvim/templates/tcl-%/: %.tcl
.config/nvim/templates/templates/: class.txt  def.txt  noarg.txt
.config/nvim/templates/test/: %.bats  setup.sh  test.m
.config/nvim/templates/tests/: %.zunit  %_test.cc  CMakeLists.txt  test_%.py  test___main__.py
.config/nvim/templates/tmp/: neomutt-%
.config/nvim/templates/tmux-%/: %.tmux
.config/nvim/templates/tree-sitter-%/: grammar.js
.config/nvim/templates/tree-sitter-%/scripts/: build.sh
.config/nvim/templates/xmake/: config.h.in
.ipython/profile_default/: .gitignore  ipython_config.py  ipython_kernel_config.py  pyproject.toml  setup.py
.ipython/profile_default/startup/: 00-first.py  __init__.py  init.py  my.py
(+1575 files in other folders)
