[build-system]
requires = ["setuptools >= 45", "setuptools_scm[toml] >= 6.2", "wheel"]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "python"
authors = [{ name = "Wu Zhenyu", email = "wuzhenyu@ustc.edu" }]
readme = "README.md"
requires-python = ">= 3.6"
keywords = [""]
license = { text = "GPL v3" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ".config/python/python/requirements.txt" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ".config/python/python/requirements/dev.txt" }

[tool.setuptools.packages.find]
where = [".config/python"]

[tool.setuptools_scm]
write_to = ".config/python/python/_version.py"

[tool.black]
line-length = 79

# https://github.com/PyCQA/pydocstyle/issues/418
[tool.pydocstyle]
add_ignore = "D205, D400"

[tool.codespell]
ignore-words-list = "inout, hist, ist, acn, fot, inactivate, doubleclick, rime, enew, ommit, ue, lene, fo"
