[build-system]
requires = ["setuptools >= 45", "setuptools_scm[toml] >= 6.2"]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "python"
readme = "README.md"
requires-python = ">= 3.7"
keywords = [""]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[[project.authors]]
name = "Wu Zhenyu"
email = "wuzhenyu@ustc.edu"

[project.license]
text = "GPL v3"

[tool.setuptools.packages.find]
where = [".config/python"]

# begin: scripts/generate-pyproject.toml.pl
[tool.setuptools.dynamic.optional-dependencies.dev]
file = ".config/python/requirements/dev.txt"
# end: scripts/generate-pyproject.toml.pl

[tool.setuptools_scm]
write_to = ".config/python/python/_version.py"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile = "black"

# https://github.com/PyCQA/pydocstyle/issues/418
[tool.pydocstyle]
add_ignore = "D205, D400"

[tool.doq]
template_path = ".config/python/templates"

[tool.bandit]
skips = ["B404", "B603", "B606"]

[tool.codespell]
ignore-words-list = "inout, hist, ist, acn, fot, inactivate, doubleclick, rime, enew, ommit, ue, lene, fo"
